Fixed the image and text wrap issue:

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -131,12 +131,12 @@ footer {
     width: 100%;
 }
 
-.bio div {
+.bio div div{
     width: 100%;
     text-align: center;
     padding: 5px;
 }
-.bio div img {
+.bio div div img {
     width: 50%;
     border-radius: 50%;
 }
@@ -199,7 +199,6 @@ footer {
     section p, main p {
         text-align: left;
         font-size: 18px;
-        width: 70%;
     }
 
     main section {
@@ -216,6 +215,10 @@ footer {
         height: 200px;
     }
 
+    .hero {
+        height: 300px;
+    }
+
     .bio {
         display: flex;
         justify-content: flex-start;
@@ -223,12 +226,17 @@ footer {
         flex-wrap: wrap;
     }
 
-    .bio div {
+    .bio div p {
+        width: 100%;
+    }
+
+    .bio div div {
+        float: left;
         text-align: left;
         width: 30%;
     }
 
-    .bio div img {
+    .bio div div img {
         width: 100%;
     }
 
@@ -280,7 +288,15 @@ footer {
         font-size: 32px;
     }
 
-    .bio div {
+    .hero {
+        height: 400px;
+    }
+
+    .bio div p {
+        width: 100%;
+    }
+
+    .bio div div {
         width: 40%;
         padding: 0 15px;
     }
@@ -307,12 +323,16 @@ footer {
         font-size: 52px;
     }
 
-    .bio div {
+    .hero {
+        height: 500px;
+    }
+
+    .bio div div {
         width: 30%;
     }
 
-    .bio p {
-        width: 70%;
+    .bio div p {
+        width: 100%;
         font-size: 28px;
     }
 }
